# SwMini

./: .clang-format  .editorconfig  .gitignore  .gitmodules  README.md  gradle.properties  organize-includes.sh  settings.gradle
app/: .gitignore  build.gradle  dex2jar.gradle  extractor.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README_MINI  achievements.properties  achievements.toml  cstrings.properties  cstrings.toml  mini.properties  mini.toml
app/src/main/assets/mini_resources/: .gitignore  lni.scl
app/src/main/assets/res/: .gitignore
app/src/main/assets/rocks/: .gitignore  README
app/src/main/assets/tests/: _file1  _file2  _file3  _file4  _file5  _file6  _file7  assets.lua  files.lua  lfs.lua  require.lua
app/src/main/cpp/: CMakeLists.txt  caver.c  caver.h  config.c  config.h  global.c  global.h  hook.c  hook.h  hook_core.c  hook_core.h  hooks.c  hooks.h  iterate.cpp  iterate.h  java.c  java.h  jni.c  jni.h  lni.c  lni.h  lni2.c  lni2.h  log.c  log.h  lua_core.c  lua_core.h  lua_libraries.c  lua_libraries.h  main.c  main.h  network.c  network.h  string_hook.c  string_hook.h  symbol.h
app/src/main/cpp/assembly/: arm64.c  arm64.h  thumb.c  thumb.h  utils.c
app/src/main/cpp/caver/: caver.c  caver.h  component.c  component.h  components.h  program_state.c  program_state.h  scene_object.h
app/src/main/cpp/core/: hooks.c  hooks.h  jni.c  log.c  lua.c
app/src/main/cpp/core/files/: dirent.h  stat.c
app/src/main/cpp/core/impl_files/: mini_file.h  path_parser.c  resource_paths.h
app/src/main/cpp/core/impl_files/backend_assets/: dirent.c  stat.c
app/src/main/cpp/core/impl_files/backend_std/: dirent.c
app/src/main/cpp/features/: armor_models.c  armor_models.h  coin_limit.c  coin_limit.h  engine_strings.c  engine_strings.h  lua_paths.c  lua_paths.h  mini_config.c  use_lua_paths.h
app/src/main/cpp/features/achievements/: README.md  ach32.c  ach64.c  achievements.c  achievements.h
app/src/main/cpp/features/cstrings/: cstrings.h  file.c  hooks.c  register.c  workarounds.c
app/src/main/cpp/features/mini_files/: functions.c  functions.h  mini_files.h  parser.c  patched_functions.c  patched_functions.h  patched_std.c  patched_std.h  resource_paths.c  resources.c  use_patched_functions.h
app/src/main/cpp/features/state_tracking/: hooks.c  state_tracking.c  state_tracking.h  watchdog.c
app/src/main/cpp/init/: lua_libs.h  patches.h
app/src/main/cpp/lua/: README.md  lauxlib.h  liolib.c  loadlib.c  loslib.c  lua.h  luaconf.h  lualib.h  mini_files.c  mini_files.h
app/src/main/cpp/lua_ext/: lfs.c  lfs.h  mini_files.c  mini_files.h
app/src/main/cpp/lua_libs/: lfs.c  libs.h
app/src/main/cpp/lua_libs/components/: components.c  components.h
app/src/main/cpp/lua_libs/lni/: bind.c  execute.c  global.c  lni.h  register.c
app/src/main/cpp/lua_libs/mini/: arch.c  controls.c  debug.c  library.c  mini.h  profile.c  recreate_hero.c  scene_find_all.c  sub_library.c  sublib.h  the_map_function.c
app/src/main/cpp/lua_libs/mini/health/: health.c  health.h
app/src/main/cpp/lua_libs/mini_character/: attributes.c  exp.c  mini_character.c  mini_character.h
app/src/main/cpp/lua_libs/mini_health/: health.c
app/src/main/cpp/mini_lua/: arch.c  controls.c  library.c  library.h  profile.c  scene_find_all.c
app/src/main/cpp/mini_lua/lni/: execute.c
app/src/main/cpp/patches/: 32patch.c  32patch.h  assets.c  assets.h  assets2.c  crash_handler.c  cstrings.c  lua_libs.c  lua_load_file.c  network.c  panic.c  panic.h  patches.h  program_state.c
app/src/main/cpp/patches/assets/: assets.h  index.c  index_tables.c
app/src/main/cpp/tools/: faults.c  prober.c  prober.h
app/src/main/java/androidx/: NonNull.java  Nullable.java
app/src/main/java/androidx/core/view/: ViewCompat.java  WindowInsetsCompat.java
app/src/main/java/com/touchfoo/swordigo/: Debug.java  GameTime.java  MusicPlayer.java  Native.java
app/src/main/java/net/itsjustsomedude/swrdg/: Achievements.java  AlertDialog.java  BuildConfig.java  ButtonController.java  CrashHandler.java  GameActions.java  LNIFunctions.java  LNIString.java  LibraryManager.java  LogProvider.java  LuaNativeInterface.java  MainActivity.java  MiniOverlay.java  ModProperties.java  NativeBridge.java  PersistentState.java
app/src/main/res/drawable/: game_button.xml  rounded_background.xml
app/src/main/res/layout/: checkbox_setting.xml  game_button.xml  main_activity.xml  overlay.xml
app/src/main/res/values/: attrs.xml  strings.xml  theme.xml  themes.xml
buildSrc/src/main/groovy/: FileHelper.groovy
docs/: README.md
docs/patches/: 32patch.md
gradle/wrapper/: gradle-wrapper.properties
